# IO_Uring-Example

./: .gitignore  CMakeLists.txt  README.md  device.cpp  hello.txt  host.cpp  io_uring_poll.cpp  io_uring_polling.c  io_uring_read.c  io_uring_write.c  main.c  main.cpp  my_io.c  my_io.cpp  my_io.h  omp_io_uring_atomic.c  omp_io_uring_manual.c  omp_io_uring_polling.c  omp_io_uring_ptr.c  omp_io_uring_string.c  omp_io_uring_writer.c  omp_sync_task.cpp  polling.c  test.c  testPerformance.py
Data/: Big-Data1.txt  Large-Data1.txt  Large-Data2.txt  Large-Data3.txt  Midle-Data1.txt  Midle-Data2.txt  Midle-Data3.txt  Small-Data2.txt  Small-Data3.txt  copy_files.sh
Data/Large/: 92.txt  99.txt
Data/Midle/: 5.txt
Data/Small/: 1.txt
example/: My_read.cpp  fread.c  hao  io_uring_cp.c  io_uring_polling.c  io_uring_read.c  omp_io_uring_manual.c  omp_io_uring_polling.c  omp_io_uring_writer.c  polling.c
